fix pagination & boost meta visibility

--- a/assets/css/buttons.css
+++ b/assets/css/buttons.css
@@ -72,22 +72,6 @@ a.button.inline:hover {
   background: none;
 }
 
-a.button.inline::before {
-  content: "["
-}
-
-a.button.inline::after {
-  content: "]"
-}
-
-a.button.inline.prev::before {
-  content: "< ["
-}
-
-a.button.inline.next::after {
-  content: "] >"
-}
-
 a.read-more,
 a.read-more:hover,
 a.read-more:active {
